--- a/Main.ipynb
+++ b/Main.ipynb
@@ -2,57 +2,126 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "473f2f7e",
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello World\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'prepare_image' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m~\\Desktop\\COS783\\COS783FinalAssignment\\Main.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Hello World'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[0mtrain_X\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtrain_Y\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mDataSet\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgetDataSet\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m;\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m \u001b[0mtest_X\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtest_Y\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mDataSet\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgetDataSet\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m;\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\Desktop\\COS783\\COS783FinalAssignment\\DataSet.py\u001b[0m in \u001b[0;36mgetDataSet\u001b[1;34m(DataSetType)\u001b[0m\n\u001b[0;32m     17\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mfile\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mallFiles\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     18\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mfile\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mendswith\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'jpg'\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mor\u001b[0m \u001b[0mfile\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mendswith\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'png'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 19\u001b[1;33m             \u001b[0mX\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mprepare_image\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfile\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     20\u001b[0m             \u001b[0mY\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m     \u001b[1;31m# label for authentic images\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     21\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'prepare_image' is not defined"
-     ]
-    }
-   ],
+   "execution_count": 49,
+   "id": "0efee29f",
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "%run Main.py"
+    "#converts input image to ela applied image\n",
+    "from PIL import Image, ImageChops, ImageEnhance\n",
+    "\n",
+    "\n",
+    "def convert_to_ela_image(filename,quality):\n",
+    "\n",
+    "    Original_Image = Image.open(filename).convert('RGB')\n",
+    "\n",
+    "    Compressed_Image_filename = 'resaved_image.jpg'\n",
+    "    Original_Image.save(Compressed_Image_filename,'JPEG',quality=quality)\n",
+    "    Compressed_Image = Image.open(Compressed_Image_filename)\n",
+    "\n",
+    "    ELA_Image = ImageChops.difference(Original_Image,Compressed_Image)\n",
+    "    \n",
+    "    #scaling factors are calculated from pixel extremas\n",
+    "    extrema = ELA_Image.getextrema()\n",
+    "    max_difference = max([pix[1] for pix in extrema])\n",
+    "    if max_difference ==0:\n",
+    "        max_difference = 1\n",
+    "    scale = 350.0 / max_difference\n",
+    "    \n",
+    "    ELA_Image = ImageEnhance.Brightness(ELA_Image).enhance(scale)\n",
+    "\n",
+    "    ELA_Image.save(\"ela_image.png\")\n",
+    "    return ELA_Image"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "460a28e7",
+   "execution_count": 54,
+   "id": "9e4f4857",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from os import listdir\n",
+    "from os.path import isfile\n",
+    "\n",
+    "import numpy as np\n",
+    "\n",
+    "def PreProcess(image_path):\n",
+    "    return np.array(convert_to_ela_image(image_path, 90).resize((128, 128))).flatten() / 255.0\n",
+    "\n",
+    "def getDataSet(DataSetType):\n",
+    "    X = [] # Images\n",
+    "    Y = [] # false = fake, true = real\n",
+    "\n",
+    "    if(DataSetType == 0):\n",
+    "        TestOrTrain = 'train'\n",
+    "    else:\n",
+    "        TestOrTrain = 'test'\n",
+    "\n",
+    "    path = TestOrTrain+'/REAL'\n",
+    "    print(path);\n",
+    "\n",
+    "    allFiles = []\n",
+    "    for f in listdir(path):\n",
+    "        if(isfile(path + '/'+ f)):\n",
+    "            allFiles.append(path + '/'+ f);\n",
+    "    \n",
+    "    for file in allFiles:\n",
+    "        if file.endswith('jpg') or file.endswith('png'):\n",
+    "            X.append(PreProcess(file))        \n",
+    "            Y.append(True)     # label for authentic images \n",
+    "            \n",
+    "    print(f'Total images: {len(X)}\\nTotal labels: {len(Y)}')\n",
+    "\n",
+    "\n",
+    "    path = TestOrTrain+'/FAKE'\n",
+    "    print(path);\n",
+    "\n",
+    "    allFiles = []\n",
+    "    for f in listdir(path):\n",
+    "        if(isfile(path + '/'+ f)):\n",
+    "            allFiles.append(path + '/'+ f);\n",
+    "    \n",
+    "    for file in allFiles:\n",
+    "        if file.endswith('jpg') or file.endswith('png'):\n",
+    "            X.append(PreProcess(file))        \n",
+    "            Y.append(False)     # label for authentic images \n",
+    "            \n",
+    "    print(f'Total images: {len(X)}\\nTotal labels: {len(Y)}')\n",
+    "\n",
+    "    X = np.array(X)\n",
+    "    Y = Y.astype(np.bool_)\n",
+    "    Y = np.packbits(Y, axis=-1)\n",
+    "    X = X.reshape(-1, 128, 128, 3)\n",
+    "\n",
+    "    return X, Y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6bcb7e83",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: PILLOW in c:\\users\\david\\anaconda3\\lib\\site-packages (8.2.0)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
+      "test/REAL\n",
+      "Total images: 10000\n",
+      "Total labels: 10000\n",
+      "test/FAKE\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "test_X, test_Y = getDataSet(1);\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "da012644",
+   "id": "6e2d5cc6",
    "metadata": {},
    "outputs": [],
    "source": []
