Added code to query a single image for demo
Needs testing

--- a/Final_COS783_Assignment (1).ipynb
+++ b/Final_COS783_Assignment (1).ipynb
@@ -406,6 +406,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "a88032be",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_case = convert_to_ela_image(\"insert image here.\")\n",
+    "test_case = np.reshape(test_case, (1, 128, 128, 3))\n",
+    "prediction = new_model.predict(test_case)\n",
+    "\n",
+    "print(\"Prediction:\", prediction)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "13586e92-abd8-4797-b052-cb0eb003dcd7",
    "metadata": {},
    "outputs": [],
