Added code to show what ela does
needs testing

--- a/Final_COS783_Assignment (1).ipynb
+++ b/Final_COS783_Assignment (1).ipynb
@@ -410,9 +410,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_case = convert_to_ela_image(\"insert image here.\")\n",
+    "import matplotlib.image as mpimg\n",
+    "\n",
+    "imageName = input('Name of image to run?\\n')\n",
+    "\n",
+    "test_case = convert_to_ela_image(imageName)\n",
     "test_case = np.reshape(test_case, (1, 128, 128, 3))\n",
     "prediction = new_model.predict(test_case)\n",
+    "\n",
+    "\n",
+    "original_image = mpimg.imread(imageName)\n",
+    "ela_image = np.array(test_case)\n",
+    "\n",
+    "fig, axes = plt.subplots(1, 2, figsize=(10, 5))\n",
+    "axes[0].imshow(original_image)\n",
+    "axes[0].set_title('Original')\n",
+    "axes[0].axis('off')\n",
+    "\n",
+    "# Display the ELA image\n",
+    "axes[1].imshow(ela_image)\n",
+    "axes[1].set_title('ELA')\n",
+    "axes[1].axis('off')\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n",
     "\n",
     "print(\"Prediction:\", prediction)"
    ]
